--- a/app/templates/auth/inactive.html
+++ b/app/templates/auth/inactive.html
@@ -3,7 +3,7 @@
 {% block body %}
 
 <div class="text-center">
-	<h1>{{gettext("Welcome!")}}</h1>
+	<h2>{{gettext("Account activation")}}</h2>
 	{% with messages = get_flashed_messages() %}
         {% if messages %}
             <div class="notification is-danger">
@@ -13,7 +13,7 @@
         {% endwith %}
   <br />
   <p>
-  {{gettext("You have not confirmed your account. Please check your inbox (and your spam folder) - you should have received an email with a confirmation link.")}}
+  {{gettext("Please check your inbox (and your spam folder) - you should have received an email with a confirmation link.")}}
   </p>
   <p>
   {{gettext("Didn't get the email?")}}
