--- a/app/templates/auth/signup.html
+++ b/app/templates/auth/signup.html
@@ -1,5 +1,5 @@
 {% extends "base/base.html" %}
-{% from "base/_formhelpers.html" import render_field %}
+{% from "base/_formhelpers.html" import render_field, render_captcha_field %}
 
 {% block body %}
 
@@ -24,7 +24,7 @@
         <p>{{ render_field(form.username) }}</p>
         <p>{{ render_field(form.password) }}</p>
         <p>{{ render_field(form.confirm) }}</p>
-	<p>{{ render_field(form.captcha_answer) }}</p>
+        <p>{{ render_captcha_field(form.captcha_answer, form.captcha_id.data) }}</p>
 	<div class="form-check">
 	  {{ form.accept_tos(class_="form-check-input") }}
 	  <label class="form-check-label" for="legal">{{gettext("I agree to the <a href='../../privacy/'>privacy policy</a> and <a href='../../terms-of-service/'>terms of service</a> of this site.")|safe}}</label>
