--- a/app/templates/base/_formhelpers.html
+++ b/app/templates/base/_formhelpers.html
@@ -26,6 +26,22 @@
 </dd>
 {% endmacro %}
 
+{% macro render_captcha_field(field, captcha_id) %}
+<div class="form-group">
+        <p>{{ field.label }}</p>
+        <p><img src="/auth/show_captcha/{{captcha_id}}"></p>
+        {{ field(class_="form-control input-s", size=32) }}
+</div>
+<dd>{% if field.errors %}
+    <ul class=errors>
+    {% for error in field.errors %}
+    <li><b>{{ error }}</b></li>
+    {% endfor %}
+    </ul>
+  {% endif %}
+</dd>
+{% endmacro %}
+
 {% macro render_password_field(field) %}
 <div class="form-group">
 	{{ field.label }} <a class="small" href={{url_for('auth.password_forgotten')}}>{{gettext('Password forgotten?')}}</a> 
