--- a/app/templates/indexer/suggest.html
+++ b/app/templates/indexer/suggest.html
@@ -5,8 +5,7 @@ SPDX-License-Identifier: AGPL-3.0-only
 -->
 
 {% extends "base/base.html" %}
-{% from "base/_formhelpers.html" import render_field %}
-{% from "base/_formhelpers.html" import render_autocomplete_field %}
+{% from "base/_formhelpers.html" import render_field, render_autocomplete_field, render_captcha_field %}
 {% block body %}
 <div class="container">
   <div class="row p-3" style="display:block;">
@@ -31,7 +30,7 @@ SPDX-License-Identifier: AGPL-3.0-only
         <p>{{ render_field(form.suggested_url) }}</p>
         <p>{{ render_autocomplete_field(form.theme) }}</p>
         <p>{{ render_field(form.note) }}</p>
-	<p>{{ render_field(form.captcha_answer) }}</p>
+        <p>{{ render_captcha_field(form.captcha_answer, form.captcha_id.data) }}</p>
         <div class="form-check">
           {{ form.accept_tos(class_="form-check-input") }}
           <label class="form-check-label" for="legal">{{gettext("I confirm that my entry does not contravene the <a href='../terms-of-service'>terms of service</a> of this site.")}}</label>
